[package]
name = "lv2"
version = "0.4.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>", "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>",
 "Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "A safe, fast, and ergonomic framework to create LV2 plugins"
readme = "README.md"
keywords = ["lv2", "audio", "dsp", "safe", "signal"]
repository = "https://github.com/RustAudio/rust-lv2"

[badge]
travis-ci = { repository = "https://github.com/RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
lv2-atom = { path = "atom" }
lv2-core = { path = "core" }
lv2-midi = { path = "midi" }
lv2-time = { path = "time" }
lv2-units = { path = "units" }
lv2-urid = { path = "urid" }
lv2-state = { path = "state" }

[workspace]
members = [
    "sys",
    "atom",
    "core",
    "core/derive",
    "time",
    "units",
    "urid",
    "urid/derive",
    "midi",
    "state",
]

[features]
default = []
host = [
    "lv2-atom/host",
    "lv2-core/host",
    "lv2-midi/host",
    "lv2-time/host",
    "lv2-units/host",
    "lv2-urid/host",
    "lv2-state/host"
]
wmidi = ["lv2-midi/wmidi"]
