[package]
name = "lv2"
version = "0.4.1"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>", "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>",
 "Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "A safe, fast, and ergonomic framework to create LV2 plugins"
readme = "README.md"
keywords = ["lv2", "audio", "dsp", "safe", "signal"]
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
lv2-atom = "1.0.0"
lv2-core = "1.0.0"
lv2-midi = "1.0.0"
lv2-time = "0.1.0"
lv2-units = "0.1.0"
lv2-urid = "1.0.0"
lv2-state = "1.0.0"
lv2-worker = "0.1.0"

[workspace]
members = [
    "atom",
    "core",
    "core/derive",
    "midi",
    "state",
    "sys",
    "time",
    "units",
    "urid",
    "urid/derive",
    "worker",
]

[patch.crates-io]
lv2-atom = { path = "atom" }
lv2-core = { path = "core" }
lv2-core-derive = { path = "core/derive" }
lv2-midi = { path = "midi" }
lv2-state = { path = "state" }
lv2-sys = { path = "sys" }
lv2-time = { path = "time" }
lv2-units = { path = "units" }
lv2-urid = { path = "urid" }
lv2-urid-derive = { path = "urid/derive" }
lv2-worker = { path = "worker" }

[features]
default = []
host = [
    "lv2-atom/host",
    "lv2-core/host",
    "lv2-midi/host",
    "lv2-time/host",
    "lv2-units/host",
    "lv2-urid/host",
    "lv2-state/host"
]
wmidi = ["lv2-midi/wmidi"]
