[package]
name = "lv2"
version = "0.5.1"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>", "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>",
 "Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "A safe, fast, and ergonomic framework to create LV2 plugins"
readme = "README.md"
keywords = ["lv2", "audio", "dsp", "safe", "signal"]
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies.lv2-atom]
version = "1.0.0"
optional = true

[dependencies.lv2-core]
version = "2.0.0"
optional = true

[dependencies.lv2-midi]
version = "1.0.0"
optional = true

[dependencies.lv2-time]
version = "0.1.0"
optional = true

[dependencies.lv2-units]
version = "0.1.0"
optional = true

[dependencies.urid]
version = "0.1.0"
optional = true

[dependencies.lv2-urid]
version = "2.0.0"
optional = true

[dependencies.lv2-state]
version = "1.0.0"
optional = true

[dependencies.lv2-worker]
version = "0.1.0"
optional = true

[features]
default = ["plugin"]
minimal_plugin = [
    "lv2-core",
    "urid",
]
plugin = [
    "minimal_plugin",
    "lv2-urid",
    "lv2-units",
    "lv2-atom",
    "wmidi",
    "lv2-midi",
]
full = [
    "lv2-atom",
    "lv2-core",
    "lv2-midi",
    "lv2-time",
    "lv2-units",
    "urid",
    "lv2-urid",
    "lv2-state",
    "lv2-worker",
]
wmidi = ["lv2-midi", "lv2-midi/wmidi"]

[workspace]
members = [
    "atom",
    "core",
    "core/derive",
    "midi",
    "state",
    "sys",
    "time",
    "units",
    "urid",
    "urid/derive",
    "urid/lv2-urid",
    "worker",
]
