[package]
name = "lv2-atom"
version = "1.0.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's Atom handling library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "https://github.com/RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-sys = { path = "../sys" }
lv2-core = { path = "../core" }
lv2-urid = { path = "../urid" }
lv2-units = { path = "../units" }

[features]
default = []
host = ["lv2-core/host", "lv2-urid/host"]