[package]
name = "lv2-atom"
version = "1.0.1"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's Atom handling library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-sys = "1.0.0"
lv2-core = "1.0.0"
lv2-urid = "1.0.0"
lv2-units = "0.1.0"

[features]
default = []
host = ["lv2-core/host", "lv2-urid/host"]