[package]
name = "lv2-atom"
version = "1.1.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's Atom handling library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-sys = "1.0.0"
lv2-units = "0.1.0"
urid = "0.1.0"

[dependencies.lv2-core]
version = "2.0.0"
optional = true

[dev-dependencies]
lv2-urid = "2.0.0"

[features]
default = ["lv2-core"]