[package]
name = "lv2-core"
version = "1.0.1"
authors = ["Janonard <jan.opdenhoevel@protonmail.com>", "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's core library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-urid = "1.0.0"
lv2-sys = "1.0.0"
lv2-core-derive = "1.0.0"

[features]
default = []
host = []
