[package]
name = "lv2-core"
version = "3.0.0"
authors = ["Janonard <jan.opdenhoevel@protonmail.com>", "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's core library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
urid = { version = "0.1.0", default-features = false }
lv2-sys = "2.0.0"
lv2-core-derive = { version = "2.1.0", optional = true }

[features]
default = ["lv2-core-derive"]
