[package]
name = "lv2-instance-access"
version = "0.1.3"
authors = ["Adrien Prokopowicz <adrien.prokopowicz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's Instance Access implementation"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
lv2-core = "3.0.0"
lv2-sys = "2.0.0"
lv2-urid = "2.1.0"
