[package]
name = "lv2-log"
version = "0.1.0"
authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lv2-sys = "2.0.0"
lv2-core = "3.0.0"
urid = "0.1.0"

[dev-dependencies]
lv2-urid = "2.1.0" # for doc example
