[package]
name = "lv2-options"
version = "0.1.0"
authors = ["Johannes Mueller <github@johannes-mueller.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's implementation of the LV2 Option extension"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-core = "2.0.0"
lv2-sys = "1.0.0"
lv2-atom = "1.1.0"
urid = "0.1.0"
