[package]
name = "lv2-state"
version = "1.0.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"

description = "rust-lv2's state handling library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "https://github.com/RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-sys = "1.0.0"
lv2-core = "1.0.0"
lv2-urid = { path = "../urid" }
lv2-atom = { path = "../atom" }

[features]
default = []
host = ["lv2-core/host", "lv2-urid/host", "lv2-atom/host"]