[package]
name = "lv2-state"
version = "2.0.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's state handling library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-sys = "2.0.0"
lv2-core = "3.0.0"
lv2-atom = { version = "2.0.0", default-features = false }
urid = { version = "0.1.0", default-features = false }

[dev-dependencies]
lv2-urid = "2.1.0"
mktemp = "0.4.0"