[package]
name = "lv2-time"
version = "0.1.1"
authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's wrapper of LV2's time types"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
lv2-core = "1.0.0"
lv2-urid = "1.0.0"
lv2-sys = "1.0.0"
