[package]
name = "lv2-ui"
version = "0.1.0"
authors = ["Johannes Mueller <github@johannes-mueller.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's ui library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-sys = "1.1.0"
lv2-core = "2.0.0"
lv2-atom = "1.1.0"
lv2-urid = "2.0.0"
urid = "0.1.0"

lv2-ui-derive = { path = "derive" }