[package]
name = "lv2-units"
version = "0.1.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's wrapper of LV2's unit types"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badge]
travis-ci = { repository = "https://github.com/RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
lv2-core = { path = "../core" }
lv2-urid = { path = "../urid" }
lv2-sys = { path = "../sys" }

[features]
default = []
host = ["lv2-urid/host"]
