[package]
name = "urid"
version = "0.1.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "Library for idiomatic URID support"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[dependencies]
urid-derive = { version = "0.1.0", optional = true }

[features]
default = ["urid-derive"]
