[package]
name = "lv2-core-derive"
version = "2.1.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>", "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Procedural macros for lv2-core"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
syn = "1.0.5"
quote = "1.0.2"