[package]
name = "lv2-midi-sys"
version = "0.1.0"
authors = ["Janonard <jan.opdenhoevel@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.51.1", default-features = false }