[package]
name = "lv2-sys-bindgen"
version = "0.1.0"
authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.53.1"
quote = "1.0.2"
proc-macro2 = "1.0.9"

[dependencies.syn]
version = "1.0.5"
default-features = false
features=["full","parsing","extra-traits","clone-impls","printing","visit-mut"]
