[package]
name = "lv2-units-sys"
version = "0.1.0"
authors = ["Janonard <jan.opdenhoevel@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = { version = "0.51.1", default-features = false }
