[package]
name = "urid-derive"
version = "0.1.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>", "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "Procedural macros for lv2-urid"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.5", features = ["full"]}
quote = "1.0.2"
proc-macro2 = "1.0.9"
regex = "1.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
urid = "0.1.0"