[package]
name = "lv2-urid"
version = "2.1.0"
authors = ["Jan-Oliver 'Janonard' Opdenhövel <jan.opdenhoevel@protonmail.com>", "Adrien Prokopowicz <adrien.prokopowicz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's URID handling library"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
lv2-core = { version = "3.0.0", optional = true, default-features = false }
lv2-sys = "2.0.0"
urid = { version = "0.1.0", default-features = false }

[features]
default = ["lv2-core"]
